[package]
name = "sa818"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
serialport = "4.3.0"
